Release 0.7.0.18
----------------
Added IEC class to fake the IEC bus.

** TODO: Users can now modify the CPU registers when in debug mode. The registers have a white background when editable.
** TODO: Implemented the various cursor modes and rates.
** TODO: Implement an IEC interface to connect via USB to XUM1541 (try using the SerialPort class?).
** TODO: Implement the joystick using a USB joystick (try using the SerialPort class?).
** TODO: Add resolution modes for Rev C and U/U+ machines, when switching board with the list.
** TODO: Implement CPU clock to count cycles for fast computers.
** TODO: Implement Timers using the number of CPU cycles that have elapsed.  E.g. 16kHz == 393 cycles (6,293,750 / 16,0000).
** TODO: Add remote debugging capability for Calypsi compiler.
** TODO: Try to sort out the issue with the character sets in non-unicode installation.
** TODO: Saving basic files to emulated SD card often doesn't work or crashes the emulator.

Release 0.7.0.17
----------------
Update F256 firmware to latest version.
When loading a disk image as the SD card, don't expect it to be a bootable partition.
Removed unused "using".
Cleaned up the layers display - for each layer, only tile or bitmap is visible, not both.
Refactored the MemoryManager, to reduce complexity. Now we have 3 descendant classes.
Fixed a bug in DirectPageIndirect addressing that cause the Carry to be incorrectly set in an addition (ADC).

Release 0.7.0.16
----------------
Another attempt at fixing pesky BCD substraction issue.
Fix the Uploader dialog to send reset program signature when uploading PGZ files.
Removed the Wingdings font from the CPU Window.
Fixed the cursor keys for PS/2 keyboard with scan codes 2.

Release 0.7.0.15
----------------
Fixed issues with TileEditor not writing to the tileset address.
Fixed asset loader issues with palettes in F256 mode.
Added second joystick - now A and B are available from menu.